# lacuna

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
docker/sandbox/: Dockerfile  entrypoint.sh
lacuna/: agent.py  cli.py  config.py  context.py  prompts.py  report.py
lacuna/sandbox/: manager.py  staging.py
lacuna/tools/: __init__.py  base.py  filesystem.py  fuzzing.py  git_tools.py  report_tool.py  search.py  shell.py  think.py
scripts/: build_sandbox.sh  run_scan.sh
targets/: cjson.yaml  example_libpng.yaml  example_openssl.yaml  expat_blind.yaml  kamailio.yaml  lua_blind.yaml  mbedtls.yaml  sleuthkit.yaml  test_tiny.yaml  zlib_blind.yaml
tests/: conftest.py
tests/integration/: test_agent_sandbox.py
tests/unit/: test_config.py  test_context.py  test_report.py  test_tools.py
workspace_src/tiny/: main.c  tiny.c  tiny.h
